# Zplayer

./: CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.githooks/: pre-commit
.github/workflows/: build-linux.yml  build-windows.yml  check.yml  ci.yml  release.yml
docs/superpowers/plans/: 2026-07-08-zplayer-phase-1-daily-playback-plan.md  2026-07-08-zplayer-phase-2-library-management-plan.md  2026-07-08-zplayer-phase-3-professional-playback-plan.md  2026-07-08-zplayer-phase-4-product-ui-plan.md  (+1 more)
libmpv/: README.md  SOURCES.md  bundle-linux-runtime.sh
mpv/: mpv.com  mpv.conf
src/: App.css  App.tsx  ServerAvatar.tsx  ServerModal.tsx  TopBar.tsx  appLogic.test.ts  appLogic.ts  calendarView.tsx  detailViews.tsx  homeView.tsx  i18n.ts  i18nLogic.test.ts  i18nLogic.ts  icons.tsx  ipc.ts  libraryViews.tsx  libraryViewsClean.tsx  libraryViewsCustom.tsx  media.ts  serverIcons.test.ts  serverIcons.ts  serverViews.tsx  subtitleDialog.test.ts  subtitleDialog.ts  types.ts  viewLogic.ts  viewParts.tsx  views.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  mpv.rs  platform_window.rs  playback_watch.rs  store.rs
src-tauri/src/api/: actions.rs  http.rs  images.rs  mapping.rs  mod.rs
src-tauri/src/models/: api.rs  input.rs  media.rs  mod.rs  payload.rs  server.rs
src/assets/icons/: README.md
src/locales/: en-US.ts  zh-CN.ts
src/styles/: base.css  calendar.css  home.css  library-search.css  modal.css  player-detail.css  responsive.css  server-settings.css
(+8 files in other folders)
